# 0709_wolf_88

./: .gitignore  DATA_AVAILABILITY_REPORT.md  PFP-EXP-001-LOG.md  PROJECT_FILES_GLOSSARY.md  README.md  TEST_REPORT.md  _test_data_pipeline.py  _test_full_pipeline_harness.py  _test_kronos_harness.py  _test_run.py  archive_test.py  check_qsize.py  config.py  config.yml  create_dummy_data.py  finmind_ETF_scraper.py  generate_gold_fixtures.py  generate_on_demand_report.py  main.py  prometheus_fire.duckdb.wal  pyproject.toml  pytest.ini  read_logs.py  requirements.in  requirements.lock.txt  run.py  run_daily_pipeline.py  run_golden_test.py  run_local_services.py  run_pipeline.py  run_pipeline.sh  run_show_results.py  run_tests.py  setup_environment.sh  tasks.py  verify_db.py  一級交易pro (1).py
.github/workflows/: ci.yml
apps/: _test_athena_phase1_harness.py  _test_athena_pragmatic_harness.py  evolution_app.py  query_gateway.py  run_backtest_worker.py  run_finmind_test.py  run_fmp_test.py  run_gold_layer.py  run_stress_index.py  run_taifex_prototype_test.py
apps/analysis_pipeline/: run.py
apps/backtesting_engine/: __init__.py  engine.py  main.py  run.py
apps/daily_market_analyzer/: __init__.py  _test_db_constraint.py  _test_robustness_harness.py  _test_v33_harness.py  analysis_engine.py  cli_interface.py  db_manager.py  logic.py  report_generator.py  run.py  test_db_manager.py  test_report_generator.py  test_run.py  test_yfinance_client.py  yfinance_client.py
apps/dashboard/: run_app.py
apps/database_loader/: __init__.py  loader.py
apps/db_manager/: setup_database.py
apps/dossier_generator/: run.py
apps/etl_pipeline/: __init__.py  aggregator.py  loader.py  run.py  transformer.py
apps/factor_engine/: engine.py  run_factor_etl.py  sma_crossover_factor.py
apps/feature_analyzer/: __init__.py  _test_chimera_harness.py  analyzer.py  cross_market_analyzer.py  dealer_position_analyzer.py  run.py
apps/finmind_client/: __init__.py  client.py  config.py  run.py  test_client.py
apps/fmp_client/: __init__.py  client.py  config.py  run.py  test_client.py
apps/fred_client/: run.py
apps/gold_layer_builder/: __init__.py  builder.py  run.py
apps/institutional_analyzer/: __init__.py  _test_garuda_harness.py  analyzer.py  run.py
apps/news_client/: __init__.py  client.py  config.py  run.py  test_client.py
apps/nyfed_client/: __init__.py  client.py  run.py
apps/pipeline_metadata_manager/: __init__.py  _test_harness.py  config.py  manager.py
apps/portfolio_optimizer/: main.py
apps/report_generator/: _test_argus_harness.py  generator.py  run.py
apps/strategic_analyzer/: __init__.py  analyzer.py  run_strategic_analyzer.py
apps/stress_index_calculator/: calculator.py  run.py
apps/taifex_data_pipeline/: _test_harness.py  _test_robust_arg_parser.py  run.py  stream_unzipper.py
apps/taifex_data_transformer/: _test_harness.py  _test_harness_v35_full_system.py  run.py  transformer.py
apps/taifex_tick_loader/: run.py
apps/time_aggregator/: __init__.py  _test_time_aggregator_harness.py  aggregator.py  run.py
apps/tools/: add_test_tasks.py  clear_results.py  show_results.py  task_adder_app.py
apps/visualization/: plot_sma_crossover.py
apps/yfinance_client/: __init__.py  client.py  run.py
apps/yfinance_downloader/: downloader.py
apps/yfinance_hydrator/: hydrator.py
apps/yfinance_pulse_engine/: pulse_engine.py  run_pulse_engine.py
core/: config.py  db_manager.py  logger.py  utils.py
core/analysis/: data_engine.py  stress_index.py
core/analyzers/: base_analyzer.py
core/clients/: __init__.py  base.py  finmind.py  fmp.py  fred.py  nyfed.py  taifex_db.py  yfinance.py
core/db/: db_manager.py
core/engines/: __init__.py  data_acquisition_engine.py  robust_acquisition_engine.py
core/pipelines/: base_step.py  pipeline.py
core/queue/: base.py  sqlite_queue.py
core/schemas/: bronze_schemas.py  gold_schemas.py  silver_schemas.py
core/services/: backtesting_service.py  evolution_chamber.py  optimizer_service.py
core/utils/: caching.py  path_utils.py
golden_test_case/: populate_mock_ohlcv.py
pipelines/: p1_yfinance_etl.py  p2_fred_etl.py
pipelines/p0_downloader/: run.py
pipelines/p1_explorer/: run.py
pipelines/p2_elt_pipeline/: run_elt.py
pipelines/p3_backfill_hourly_data/: run.py
pipelines/p4_daily_macro_etl/: extract.py  load.py  run_etl.py  transform.py
pipelines/p5_hourly_price_etl/: extract.py  load.py  run_etl.py  transform.py
prometheus_fire_backend/: .gitignore
prometheus_fire_backend/console_api/: __init__.py  main.py
prometheus_fire_backend/modules/: __init__.py  backtester.py  data_fetcher.py  data_fuser.py  factor_engine.py  http_client.py  logger.py  main_orchestrator.py  metadata_manager.py  optimizer.py  orchestrator.py
prometheus_fire_backend/strategies/: __init__.py  sma_cross_strategy.py
prometheus_fire_backend/tests/: conftest.py  test_api_e2e.py  test_api_e2e_live.py  test_api_fusion_e2e.py  test_backtest_e2e.py  (+2 more)
prometheus_fire_uv_test.egg-info/: PKG-INFO
scripts/: debug_db_writer.py  debug_factor_engine.py  gather_recon_results.py  generate_data_availability_report.py  generate_final_report.py  generate_recon_report.py  inject_env.py  launch_recon_cluster.py  run_rapid_recon.py  run_recon_worker.py  seed_recon_tasks.py  verify_db.py  verify_fred_client.py  verify_resilience_protocol.py
temp/: setup_db.py
tests/: __init__.py  _test_harness_api_failures.py  _test_harness_config_missing.py  _test_harness_data_corruption.py  _test_harness_database_loader.py  _test_harness_dependency_issues.py  _test_harness_full_pipeline.py  _test_harness_hydrator_live.py  _test_harness_taifex_live_download.py  _test_harness_taifex_transformer.py  _test_harness_yfinance_live.py  _test_logger_success_method.py  conftest.py  ignition_test.py  mock_data_utils.py  test_client.py  test_data_population.py  test_dma_temp.py  test_full_pipeline.py  test_mock_yfinance_client.py  test_p0_downloader.py  test_p1_explorer.py  test_p2_elt_pipeline.py  test_smoke.py  test_yfinance_hydrator_integration.py  test_yfinance_hydrator_unit.py
(+198 files in other folders)
