# ==============================================================================
#  【普羅米修斯之火】專案配置文件 (v1.1 - src-layout)
# ==============================================================================

[project]
name = "prometheus-fire"
version = "1.0.0"
description = "AI-assisted quantitative strategy research system."
requires-python = ">=3.12, <3.14"
dependencies = [
    "numpy<2.0",
    "pandas>=2.3.1",
    "duckdb>=1.3.2",
    "pyyaml>=6.0.2",
    "requests-cache>=1.2.1",
    "yfinance==0.2.60",
    "requests>=2.32.4",
    "urllib3<2.0",
    "pybreaker>=1.4.0",
    "plotly>=5.18.0,<5.19.0",
    "pytz>=2025.2",
    "psutil>=6.0.0",
    "fredapi>=0.5.2"
]

[project.optional-dependencies]
dev = [
    "vectorbt>=0.28.0",
    "pydantic>=2.11.7",
    "typer[all]>=0.16.0",
    "openpyxl>=3.1.5",
    "pytest>=8.4.1",
    "pytest-mock>=3.14.1",
    "ruff>=0.12.3",
    "pytest-timeout>=2.4.0"
]

# [TOOL SECTIONS]
[tool.setuptools.packages.find]
where = ["src"] # <-- 關鍵變更：告訴打包工具我們的程式碼在 src 目錄下

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
pythonpath = ["src"] # <-- 關鍵變更：告訴 pytest 我們的程式碼在 src 目錄下
timeout = 300
